完成token鉴权逻辑
