# routers/commentsRouter_controllers.go
@@ -7,70 +7,16 @@ import (
 
 func init() {
 
-    beego.GlobalControllerRouter["ant-go-jwt/controllers:DemoController"] = append(beego.GlobalControllerRouter["ant-go-jwt/controllers:DemoController"],
+    beego.GlobalControllerRouter["ant-go-jwt/controllers:LoginController"] = append(beego.GlobalControllerRouter["ant-go-jwt/controllers:LoginController"],
         beego.ControllerComments{
-            Method: "Post",
-            Router: `/`,
+            Method: "Login",
+            Router: `/login`,
             AllowHTTPMethods: []string{"post"},
             MethodParams: param.Make(),
             Filters: nil,
             Params: nil})
 
-    beego.GlobalControllerRouter["ant-go-jwt/controllers:DemoController"] = append(beego.GlobalControllerRouter["ant-go-jwt/controllers:DemoController"],
-        beego.ControllerComments{
-            Method: "GetAll",
-            Router: `/`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["ant-go-jwt/controllers:DemoController"] = append(beego.GlobalControllerRouter["ant-go-jwt/controllers:DemoController"],
-        beego.ControllerComments{
-            Method: "Get",
-            Router: `/:uid`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["ant-go-jwt/controllers:DemoController"] = append(beego.GlobalControllerRouter["ant-go-jwt/controllers:DemoController"],
-        beego.ControllerComments{
-            Method: "Put",
-            Router: `/:uid`,
-            AllowHTTPMethods: []string{"put"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["ant-go-jwt/controllers:DemoController"] = append(beego.GlobalControllerRouter["ant-go-jwt/controllers:DemoController"],
-        beego.ControllerComments{
-            Method: "Delete",
-            Router: `/:uid`,
-            AllowHTTPMethods: []string{"delete"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["ant-go-jwt/controllers:DemoController"] = append(beego.GlobalControllerRouter["ant-go-jwt/controllers:DemoController"],
-        beego.ControllerComments{
-            Method: "Login",
-            Router: `/login`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["ant-go-jwt/controllers:DemoController"] = append(beego.GlobalControllerRouter["ant-go-jwt/controllers:DemoController"],
-        beego.ControllerComments{
-            Method: "Logout",
-            Router: `/logout`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["ant-go-jwt/controllers:UserController"] = append(beego.GlobalControllerRouter["ant-go-jwt/controllers:UserController"],
+    beego.GlobalControllerRouter["ant-go-jwt/controllers:RegisterController"] = append(beego.GlobalControllerRouter["ant-go-jwt/controllers:RegisterController"],
         beego.ControllerComments{
             Method: "Register",
             Router: `/`,
@@ -81,9 +27,9 @@ func init() {
 
     beego.GlobalControllerRouter["ant-go-jwt/controllers:UserController"] = append(beego.GlobalControllerRouter["ant-go-jwt/controllers:UserController"],
         beego.ControllerComments{
-            Method: "Login",
-            Router: `/login`,
-            AllowHTTPMethods: []string{"post"},
+            Method: "GetUsers",
+            Router: `/`,
+            AllowHTTPMethods: []string{"get"},
             MethodParams: param.Make(),
             Filters: nil,
             Params: nil})
